--- a/surface/.eslintrc
+++ b/surface/.eslintrc
@@ -1,22 +1,26 @@
 {
-  "parser": "babel-eslint",
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
-  "parserOptions": {
-    "ecmaFeatures": {
-        "jsx": true,
-        "modules": true
-    }
-},
-  "rules": {
-    "quotes": [2, "single", "avoid-escape"],
-    "semi": "error"
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  }
+	"parser": "babel-eslint",
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended"
+	],
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true,
+			"modules": true
+		}
+	},
+	"env": {
+		"node": true
+	},
+	"rules": {
+		"quotes": [2,	"single",	"avoid-escape"],
+		"indent": ["error", "tab"],
+		"semi": "error"
+	},
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	}
 }
