--- a/surface/package.json
+++ b/surface/package.json
@@ -4,7 +4,9 @@
   "description": "Package concerned with the pilot interface and dataflow on the surface side.",
   "main": "electron-setup.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+		"start": "webpack-dev-server --open --hot --mode development",
+		"build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,8 @@
   "homepage": "https://github.com/purduerov/X12-Core/surface#readme",
   "dependencies": {
     "react": "16.9.0",
-    "webpack": "^4.40.2"
+    "react-dom": "16.9.0",
+    "webpack": "4.40.2"
   },
   "devDependencies": {
     "@babel/cli": "7.6.0",
@@ -35,7 +38,15 @@
     "@babel/preset-env": "7.6.0",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "10.0.3",
+    "babel-loader": "8.0.6",
+    "css-loader": "3.2.0",
     "eslint": "6.4.0",
-    "eslint-plugin-react": "7.14.3"
+    "eslint-plugin-react": "7.14.3",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "1.0.0",
+    "webpack-cli": "3.3.9",
+    "webpack-combine-loaders": "2.0.4",
+    "webpack-dev-server": "3.8.1"
   }
 }
