--- a/surface/package.json
+++ b/surface/package.json
@@ -31,9 +31,10 @@
     "bootstrap": "4.3.1",
     "jquery": "^3.4.1",
     "react": "16.9.0",
+    "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
-    "webpack": "4.40.2",
-    "react-bootstrap": "1.0.0-beta.12"
+    "react-webworker": "^2.1.0",
+    "webpack": "4.40.2"
   },
   "devDependencies": {
     "@babel/cli": "7.6.0",
