--- a/surface/package.json
+++ b/surface/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "npm test",
-    "start": "webpack-dev-server --open --hot --mode development",
+    "start": "webpack -d && electron .",
     "build": "webpack --mode production",
     "electron": "electron ."
   },
