--- a/surface/package.json
+++ b/surface/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "npm test",
     "start": "webpack-dev-server --open --hot --mode development",
-    "build": "webpack --mode production",
+		"build": "webpack --mode production",
+		"webpack-watch": "webpack -w --mode development",
+		"electron-watch": "NODE_ENV=WATCH electron .",
     "electron": "electron ."
   },
   "repository": {
@@ -45,6 +47,7 @@
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
+    "electron-reload": "^1.5.0",
     "eslint": "6.4.0",
     "eslint-plugin-react": "7.14.3",
     "style-loader": "1.0.0",
