--- a/surface/package.json
+++ b/surface/package.json
@@ -46,6 +46,7 @@
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
+    "electron-devtools-installer": "^2.2.4",
     "eslint": "6.4.0",
     "eslint-plugin-react": "7.14.3",
     "style-loader": "1.0.0",
