--- a/surface/package.json
+++ b/surface/package.json
@@ -38,6 +38,7 @@
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
     "react-webworker": "^2.1.0",
+    "roslib": "^1.0.1",
     "webpack": "4.40.2"
   },
   "devDependencies": {
