--- a/surface/package.json
+++ b/surface/package.json
@@ -9,7 +9,8 @@
     "build": "webpack --mode production",
     "webpack-watch": "webpack -w --mode development",
     "electron-watch": "NODE_ENV=WATCH electron .",
-    "electron": "electron ."
+    "electron": "electron .",
+    "electron-rebuild": "electron-rebuild -w opencv4nodejs"
   },
   "repository": {
     "type": "git",
@@ -33,7 +34,8 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "electron": "^6.0.10",
-    "gamepad": "^1.6.0",
+    "electron-rebuild": "^1.8.6",
+    "opencv4nodejs": "^5.3.0",
     "react": "16.9.0",
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
