--- a/surface/package.json
+++ b/surface/package.json
@@ -32,14 +32,16 @@
   "homepage": "https://github.com/purduerov/X12-Core/surface#readme",
   "dependencies": {
     "bootstrap": "4.3.1",
-    "electron": "^6.0.10",
-    "gamepad": "^1.6.0",
+    "electron": "6.0.10",
+    "gamepad": "1.6.0",
+    "lodash": "4.17.15",
     "react": "16.9.0",
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
-    "react-webworker": "^2.1.0",
-    "roslib": "^1.0.1",
-    "webpack": "4.40.2"
+    "react-webworker": "2.1.0",
+    "roslib": "1.0.1",
+    "webpack": "4.40.2",
+    "yup": "0.27.0"
   },
   "devDependencies": {
     "@babel/cli": "7.6.0",
@@ -49,8 +51,8 @@
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
-    "electron-reload": "^1.5.0",
-    "electron-devtools-installer": "^2.2.4",
+    "electron-reload": "1.5.0",
+    "electron-devtools-installer": "2.2.4",
     "eslint": "6.4.0",
     "eslint-plugin-react": "7.14.3",
     "style-loader": "1.0.0",
