--- a/surface/package.json
+++ b/surface/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "electron": "^6.0.10",
+    "gamepad": "1.6.0",
     "electron-rebuild": "^1.8.6",
     "opencv4nodejs": "^5.3.0",
     "react": "16.9.0",
