--- a/surface/package.json
+++ b/surface/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "bootstrap": "4.3.1",
     "electron": "6.0.10",
+    "electron-context-menu": "^0.9.1",
     "gamepad": "1.6.0",
     "lodash": "4.17.15",
     "react": "16.9.0",
