--- a/surface/package.json
+++ b/surface/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --open --hot --mode development",
     "build": "webpack --mode production",
     "webpack-watch": "webpack -w --mode development",
-    "electron-watch": "NODE_ENV=DEV electron .",
+    "electron-watch": "NODE_ENV=WATCH electron .",
     "electron": "electron .",
     "electron-rebuild": "electron-rebuild -w opencv4nodejs"
   },
