making changes to gamepad before integrating store

--- a/surface/.eslintrc
+++ b/surface/.eslintrc
@@ -15,7 +15,7 @@
 	},
 	"rules": {
 		"quotes": [2,	"single",	"avoid-escape"],
-		"indent": ["error", "tab"],
+		"indent": ["error", "tab", { "SwitchCase": 1 }],
 		"semi": "error"
 	},
 	"settings": {
