--- a/surface/package.json
+++ b/surface/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "webpack-start": "webpack-dev-server --open --hot --mode development",
     "webpack-build": "webpack --mode production",
-		"webpack-watch": "webpack -w --mode development",
-		"electron": "electron .",
+    "webpack-watch": "webpack -w --mode development",
+    "electron": "electron .",
     "electron-watch": "NODE_ENV=WATCH electron .",
     "electron-rebuild": "electron-rebuild -w opencv4nodejs"
   },
@@ -29,21 +29,24 @@
   "bugs": {
     "url": "https://github.com/purduerov/X12-Core/issues"
   },
-  "homepage": "https://github.com/purduerov/X12-Core/surface#readme",
+	"homepage": "https://github.com/purduerov/X12-Core/surface#readme",
+	"NOTICE": [
+		"I am choosing not to use package-lock.json and instead specifying exact",
+		"versions of dependencies. Upgrades need to be done manually with npm update"
+	],
   "dependencies": {
     "bootstrap": "4.3.1",
-    "opencv4nodejs": "^5.3.0",
     "electron": "6.0.10",
-    "electron-context-menu": "^0.9.1",
+    "electron-context-menu": "0.9.1",
     "gamepad": "1.6.0",
     "lodash": "4.17.15",
+    "opencv4nodejs": "5.3.0",
     "react": "16.9.0",
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
     "react-webworker": "2.1.0",
     "roslib": "1.0.1",
-    "webpack": "4.40.2",
-    "yup": "0.27.0"
+    "webpack": "4.40.2"
   },
   "devDependencies": {
     "@babel/cli": "7.6.0",
