--- a/surface/package.json
+++ b/surface/package.json
@@ -9,7 +9,11 @@
     "webpack-watch": "webpack -w --mode development",
     "electron": "electron .",
     "electron-watch": "NODE_ENV=WATCH electron .",
-    "electron-rebuild": "electron-rebuild -w opencv4nodejs"
+    "electron-rebuild": "electron-rebuild -w opencv4nodejs",
+    "gamepad-test": "node src/gamepad/gamepad_test.js"
+  },
+  "engines": {
+    "node": "8.17.0"
   },
   "repository": {
     "type": "git",
@@ -29,18 +33,18 @@
   "bugs": {
     "url": "https://github.com/purduerov/X12-Core/issues"
   },
-	"homepage": "https://github.com/purduerov/X12-Core/surface#readme",
-	"NOTICE": [
-		"I am choosing not to use package-lock.json and instead specifying exact",
-		"versions of dependencies. Upgrades need to be done manually with npm update"
-	],
+  "homepage": "https://github.com/purduerov/X12-Core/surface#readme",
+  "NOTICE": [
+    "I am choosing not to use package-lock.json and instead specifying exact",
+    "versions of dependencies. Upgrades need to be done manually. Check the",
+    "status of packages out of date with `npm outdated`"
+  ],
   "dependencies": {
     "bootstrap": "4.3.1",
     "electron": "6.0.10",
     "electron-context-menu": "0.9.1",
     "gamepad": "1.6.0",
     "lodash": "4.17.15",
-    "opencv4nodejs": "5.3.0",
     "react": "16.9.0",
     "react-bootstrap": "1.0.0-beta.12",
     "react-dom": "16.9.0",
