--- a/surface/package.json
+++ b/surface/package.json
@@ -40,6 +40,7 @@
     "status of packages out of date with `npm outdated`"
   ],
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "bootstrap": "4.3.1",
     "electron": "6.0.10",
     "electron-context-menu": "0.9.1",
