--- a/surface/package.json
+++ b/surface/package.json
@@ -44,10 +44,10 @@
     "bootstrap": "4.3.1",
     "electron": "6.0.10",
     "electron-context-menu": "0.9.1",
-    "gamepad": "1.6.0",
     "lodash": "4.17.15",
+    "nvm": "0.0.4",
     "react": "16.9.0",
-    "react-bootstrap": "1.0.0-beta.12",
+    "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "16.9.0",
     "react-webworker": "2.1.0",
     "roslib": "1.0.1",
